--- a/src/app/layout/nav2/nav2.component.html
+++ b/src/app/layout/nav2/nav2.component.html
@@ -4,45 +4,42 @@
             <div class="col-xl-2 col-lg-2">
                 <div class="logo-area">
                     <a href="index.html" class="temp-logo">
-                        <img src="../../../assets/img/logo/logo1.jpg" width="157" height="40" alt="logo" class="img-fluid">
+                        <img src="../../../assets/img/logo/logo1.jpg" width="157" height="40" alt="logo"
+                            class="img-fluid">
                     </a>
                 </div>
             </div>
             <div class="col-xl-8 col-lg-8 d-flex justify-content-center position-static">
                 <nav id="dropdown" class="template-main-menu">
-                  <ul>
-                    <li>
-<<<<<<< HEAD
-                      <a routerLink="/home" routerLinkActive="active" >Home</a>
-=======
-                      <a routerLink="/" >Home</a>
->>>>>>> f5338362f21d00a245c612e4c137ce549ac274e1
-                    </li>
-                    <li>
-                      <a routerLink="/about" routerLinkActive="active">About</a>
-                    </li>
-                    <li>
-                      <a routerLink="/property" routerLinkActive="active">Property</a>
-                    </li>
-                    <li>
-                      <a routerLink="/blogs" routerLinkActive="active">Blog</a>
-                    </li>
-                    <li>
-                      <a routerLink="/management" routerLinkActive="active">Management</a>
-                    </li>
-                    <li>
-                      <a routerLink="/agents" routerLinkActive="active">Agents</a>
-                    </li>
-                    <li>
-                      <a routerLink="/contact" routerLinkActive="active">Contact Us</a>
-                    </li>
-                  </ul>
+                    <ul>
+                        <li>
+                            <a routerLink="/home" routerLinkActive="active">Home</a>
+                        </li>
+                        <li>
+                            <a routerLink="/about" routerLinkActive="active">About</a>
+                        </li>
+                        <li>
+                            <a routerLink="/property" routerLinkActive="active">Property</a>
+                        </li>
+                        <li>
+                            <a routerLink="/blogs" routerLinkActive="active">Blog</a>
+                        </li>
+                        <li>
+                            <a routerLink="/management" routerLinkActive="active">Management</a>
+                        </li>
+                        <li>
+                            <a routerLink="/agents" routerLinkActive="active">Agents</a>
+                        </li>
+                        <li>
+                            <a routerLink="/contact" routerLinkActive="active">Contact Us</a>
+                        </li>
+                    </ul>
                 </nav>
             </div>
             <div class="col-xl-2 col-lg-2 d-flex justify-content-end">
                 <div class="header-action-layout1">
                     <ul class="action-list">
-                      
+
                         <li class="listing-button">
                             <a target="_blank" href="https://glorywebsiteadmin.onrender.com/admin" class="listing-btn">
                                 <span>
@@ -57,12 +54,10 @@
         </div>
     </div>
 </div>
-<div
-    class="rt-header-menu mean-container position-relative"
-    id="meanmenu">
+<div class="rt-header-menu mean-container position-relative" id="meanmenu">
     <div class="mean-bar">
         <a href="index.html">
-            <img src='../../../assets/img/logo/logo1.jpg' alt='logo' class='img-fluid'/>
+            <img src='../../../assets/img/logo/logo1.jpg' alt='logo' class='img-fluid' />
         </a>
         <div class="mean-bar--right">
             <div class="actions search">
@@ -87,28 +82,28 @@
                 <ul class="menu">
                     <li class="list menu-item-parent menu-item-has-children">
                         <a routerLink="/">Home</a>
-                     
+
                     </li>
-                    <li >
+                    <li>
                         <a routerLink="/about" routerLinkActive="active">About</a>
-                      
+
                     </li>
                     <li>
                         <a routerLink="/property" routerLinkActive="active">Property</a>
-                      </li>
-                      <li>
+                    </li>
+                    <li>
                         <a routerLink="/blogs" routerLinkActive="active">Blog</a>
                     </li>
-                      <li>
+                    <li>
                         <a routerLink="/management" routerLinkActive="active">Management</a>
-                      </li>
-                      <li>
+                    </li>
+                    <li>
                         <a routerLink="/agents" routerLinkActive="active">Agents</a>
-                      </li>
-                      <li>
+                    </li>
+                    <li>
                         <a routerLink="/contact" routerLinkActive="active">Contact Us</a>
-                      </li>
-         
+                    </li>
+
                 </ul>
             </nav>
         </div>
