applying the comments

--- a/src/app/pages/about/about.component.html
+++ b/src/app/pages/about/about.component.html
@@ -11,26 +11,27 @@
                 <div class="about-box3 wow fadeInUp" data-wow-delay=".2s">
                     <span class="item-subtitle">About Us</span>
                     <h2 class="item-title">{{item.attributes.title}}</h2>
-                    <h4>  {{item.attributes.subtitel}}</h4>
+                    <h4> {{item.attributes.subtitel}}</h4>
                     <p>
                         {{item.attributes.aboutus}}
                     </p>
                     <div class="row">
-                        <div class="col-lg-6 col-md-6 col-sm-6" *ngFor="let fee of aboutfeature; let i = index;" style="padding-bottom: 20px;">
-                          <div class="about-layout1">
-                            <div class="item-img">
-                              <img [src]="getImagePath(fee.attributes.logo)" alt="shape" width="60" height="57">
+                        <div class="col-lg-6 col-md-6 col-sm-6" *ngFor="let fee of aboutfeature; let i = index;"
+                            style="padding-bottom: 20px;">
+                            <div class="about-layout1">
+                                <div class="item-img">
+                                    <img [src]="getImagePath(fee.attributes.logo)" alt="shape" width="60" height="57">
+                                </div>
+                                <h3 class="item-sm-title">{{fee.attributes.title}}</h3>
+                                <p>{{fee.attributes.description}}</p>
                             </div>
-                            <h3 class="item-sm-title">{{fee.attributes.title}}</h3>
-                            <p>{{fee.attributes.description}}</p>
-                          </div>
                         </div>
-                      </div>
+                    </div>
                 </div>
             </div>
-           
+
         </div>
-       
+
     </div>
 </section>
 <app-footer></app-footer>
