--- a/src/app/layout/navbar/navbar.component.html
+++ b/src/app/layout/navbar/navbar.component.html
@@ -2,22 +2,43 @@
     <div id="header-topbar" class="header-topbar">
         <div class="container">
             <div class="row d-flex align-items-center">
-                <div class="col-lg-6">
+                <div class="col-lg-4 d-flex">
                     <ul class="topbar-left">
-                        <li class="item-location"><i class="fas fa-map-marker-alt"></i><span style="color: white;">
-                            
-                            Glory BLDG, (Kasanchis), Addis Ababa, Ethiopia
-                        </span></li>
+                        <li class="item-location">
+                            <i class="fas fa-map-marker-alt">
+                            </i>
+                            <span style="color: white;">
+                                {{locations[0]?.attributes?.name}}
+                            </span>
+                            <i class="fas fa-map-phone-alt">
+                            </i>
+
+                        </li>
+
                     </ul>
                 </div>
-                <div class="col-lg-6 d-flex justify-content-end">
+                <div class="col-lg-4 d-flex">
+                    <ul class="topbar-left">
+                        <li class="item-location">
+                            <i class="fas fa-phone">
+                            </i>
+                            <span *ngFor="let data of phones" style="color: white;">
+                                {{","}} {{data?.attributes?.number}}
+                            </span>
+                            <i class="fas fa-map-phone-alt">
+                            </i>
+
+                        </li>
+
+                    </ul>
+                </div>
+                <div class="col-lg-4 d-flex justify-content-end">
                     <ul class="topbar-right">
                         <li class="social-icon" style="color: white;">
                             <label style="color: white;">Follow Us On:</label>
-                                <a target="_blank" style="color: white;" href="https://www.facebook.com/"><i class="fab fa-facebook-square"></i></a>
-                                <a target="_blank" style="color: white;" href="https://twitter.com/"><i class="fab fa-twitter"></i></a>
-                                <a target="_blank" style="color: white;" href="https://www.linkedin.com/signup"><i class="fab fa-linkedin-in"></i></a>
-                                <a target="_blank" style="color: white;" href="https://www.instagram.com/"><i class="fab fa-instagram"></i></a>
+
+                            <a *ngFor="let data of social_media" target="_blank" style="color: white;"
+                                href={{data?.attributes?.link}}><i class="fab fa-{{data?.attributes?.name}}"></i></a>
                         </li>
                     </ul>
                 </div>
@@ -25,44 +46,45 @@
         </div>
     </div>
     <div id="rt-sticky-placeholder"></div>
-    <div id="header-menu" class="header-menu menu-layout1" >
+    <div id="header-menu" class="header-menu menu-layout1">
         <div class="container">
             <div class="row d-flex align-items-center">
                 <div class="col-xl-2 col-lg-2">
                     <div class="logo-area">
                         <a href="index.html" class="temp-logo">
-                            <img src="../../../assets/img/logo/logo1.jpg" width="157" height="40" alt="logo" class="img-fluid">
+                            <img src="../../../assets/img/logo/logo1.jpg" width="157" height="40" alt="logo"
+                                class="img-fluid">
                         </a>
                     </div>
                 </div>
                 <div class="col-xl-8 col-lg-8 d-flex justify-content-center position-static">
                     <nav id="dropdown" class="template-main-menu">
-                      <ul>
-                        <li>
-                          <a routerLink="/" >Home</a>
-                        </li>
-                        <li>
-                          <a routerLink="/about" routerLinkActive="active">About</a>
-                        </li>
-                        <li>
-                          <a routerLink="/property" routerLinkActive="active">Property</a>
-                        </li>
-                        <li>
-                            <a routerLink="/blogs" routerLinkActive="active">Blog</a>
-                        </li>
-                        <li>
-                          <a routerLink="/management" routerLinkActive="active">Management</a>
-                        </li>
-                        <li>
-                          <a routerLink="/agents" routerLinkActive="active">Agents</a>
-                        </li>
-                        <li>
-                          <a routerLink="/contact" routerLinkActive="active">Contact Us</a>
-                        </li>
-                      </ul>
+                        <ul>
+                            <li>
+                                <a routerLink="/">Home</a>
+                            </li>
+                            <li>
+                                <a routerLink="/about" routerLinkActive="active">About</a>
+                            </li>
+                            <li>
+                                <a routerLink="/property" routerLinkActive="active">Property</a>
+                            </li>
+                            <li>
+                                <a routerLink="/blogs" routerLinkActive="active">Blog</a>
+                            </li>
+                            <li>
+                                <a routerLink="/management" routerLinkActive="active">Management</a>
+                            </li>
+                            <li>
+                                <a routerLink="/agents" routerLinkActive="active">Agents</a>
+                            </li>
+                            <li>
+                                <a routerLink="/contact" routerLinkActive="active">Contact Us</a>
+                            </li>
+                        </ul>
                     </nav>
                 </div>
-                <div class="col-xl-2 col-lg-2 d-flex justify-content-end">
+                <!-- <div class="col-xl-2 col-lg-2 d-flex justify-content-end">
                     <div class="header-action-layout1">
                         <ul class="action-list">
                           
@@ -76,17 +98,15 @@
                             </li>
                         </ul>
                     </div>
-                </div>
+                </div> -->
             </div>
         </div>
     </div>
 </header>
-<div
-    class="rt-header-menu mean-container position-relative"
-    id="meanmenu">
+<div class="rt-header-menu mean-container position-relative" id="meanmenu">
     <div class="mean-bar">
         <a href="index.html">
-            <img src='../../../assets/img/logo/logo1.jpg' alt='logo' class='img-fluid'/>
+            <img src='../../../assets/img/logo/logo1.jpg' alt='logo' class='img-fluid' />
         </a>
         <div class="mean-bar--right">
             <div class="actions search">
@@ -110,29 +130,29 @@
             <nav class="menu-main-primary-container">
                 <ul class="menu">
                     <li>
-                        <a  routerLink="/home"  routerLinkActive="active">Home</a>
-                     
+                        <a routerLink="/home" routerLinkActive="active">Home</a>
+
                     </li>
-                    <li >
+                    <li>
                         <a routerLink="/about" routerLinkActive="active">About</a>
-                      
+
                     </li>
                     <li>
                         <a routerLink="/property" routerLinkActive="active">Property</a>
-                      </li>
-                      <li>
+                    </li>
+                    <li>
                         <a routerLink="/management" routerLinkActive="active">Management</a>
-                      </li>
-                      <li>
+                    </li>
+                    <li>
                         <a routerLink="/blogs" routerLinkActive="active">Blog</a>
                     </li>
-                      <li>
+                    <li>
                         <a routerLink="/agents" routerLinkActive="active">Agents</a>
-                      </li>
-                      <li>
+                    </li>
+                    <li>
                         <a routerLink="/contact" routerLinkActive="active">Contact Us</a>
-                      </li>
-                   
+                    </li>
+
                 </ul>
             </nav>
         </div>
