--- a/src/app/pages/home/components/home-why-choose-us/home-why-choose-us.component.html
+++ b/src/app/pages/home/components/home-why-choose-us/home-why-choose-us.component.html
@@ -29,19 +29,20 @@
 
                     </div>
                 </div>
-                  <div class="video-overlay" [hidden]="!isVideoPopupOpen">
-                 
+                z <div class="video-overlay" [hidden]="!isVideoPopupOpen">
+
                     <div class="video-container">
                         <div class="col-lg-12 text-end " style="margin-bottom: 60px; margin-left: 50px;">
-                            <button class="btn btn-success" (click)="closeVideoPopup()">X</button>    
+                            <button class="btn btn-success" (click)="closeVideoPopup()">X</button>
                         </div>
-                      <iframe width="960" height="615" src="http://www.youtube.com/embed/1iIZeIy7TqM" frameborder="0" allowfullscreen></iframe>
-                      <!-- <div *ngFor="let item of videolink">
+                        <iframe width="960" height="615" src="http://www.youtube.com/embed/1iIZeIy7TqM" frameborder="0"
+                            allowfullscreen></iframe>
+                        <!-- <div *ngFor="let item of videolink">
                         <iframe width="960" height="615" [src]="item.attributes.vediolink" frameborder="0" allowfullscreen></iframe>
                       </div> -->
                     </div>
-                    
-                  </div>
+
+                </div>
             </div>
             <div class="col-lg-6">
                 <div class="about-box2 wow fadeInRight" data-wow-delay=".5s">
