--- a/src/app/layout/footer/footer.component.html
+++ b/src/app/layout/footer/footer.component.html
@@ -1,4 +1,3 @@
-
 <footer class="footer-area">
     <div class="footer-top footer-top-style">
         <div class="container">
@@ -6,17 +5,19 @@
                 <div class="col-xl-3 col-lg-4 col-md-6 col-sm-6">
                     <div class="footer-logo-area footer-logo-area-2">
                         <div class="item-logo">
-                            <img src="../../../assets/img/logo/logo1.jpg" width="157" height="30" alt="logo" class="img-fluid">
+                            <img src="../../../assets/img/logo/logo1.jpg" width="157" height="30" alt="logo"
+                                class="img-fluid">
                         </div>
-                        <p>Glory Real Estate is the result of many years of research into the construction & delivery of affordable luxurious apartments and commercial centers in Addis Ababa. 
+                        <p>Glory Real Estate is the result of many years of research into the construction & delivery of
+                            affordable luxurious apartments and commercial centers in Addis Ababa.
                         </p>
                         <div class="item-social">
                             <ul>
-                                <li><a href="https://www.facebook.com/" target="_blank"><i class="fab fa-facebook-f"></i></a></li>
-                                <li><a href="https://twitter.com/" target="_blank"><i class="fab fa-twitter"></i></a></li>
-                                <li><a href="https://vimeo.com/" target="_blank"><i class="fab fa-vimeo-v"></i></a></li>
-                                <li><a href="https://www.pinterest.com/" target="_blank"><i class="fab fa-pinterest-p"></i></a></li>
-                                <li><a href="https://web.whatsapp.com/" target="_blank"><i class="fab fa-whatsapp"></i></a></li>
+                                <li *ngFor="let data of social_media">
+                                    <a target="_blank" style="color: white;" href={{data?.attributes?.link}}><i
+                                            class="fab fa-{{data?.attributes?.name}}"></i></a>
+                                </li>
+
                             </ul>
                         </div>
                     </div>
@@ -29,37 +30,45 @@
                         <div class="item-link">
                             <ul>
                                 <li>
-                                  <a routerLink="/home" routerLinkActive="active">Home</a>
+                                    <a routerLink="/home" routerLinkActive="active">Home</a>
                                 </li>
                                 <li>
-                                  <a routerLink="/about" routerLinkActive="active">About</a>
+                                    <a routerLink="/about" routerLinkActive="active">About</a>
                                 </li>
                                 <li>
-                                  <a routerLink="/property" routerLinkActive="active">Property</a>
+                                    <a routerLink="/property" routerLinkActive="active">Property</a>
                                 </li>
                                 <li>
-                                  <a routerLink="/management" routerLinkActive="active">Management</a>
+                                    <a routerLink="/management" routerLinkActive="active">Management</a>
                                 </li>
                                 <li>
-                                  <a routerLink="/agents" routerLinkActive="active">Agents</a>
+                                    <a routerLink="/agents" routerLinkActive="active">Agents</a>
                                 </li>
                                 <li>
-                                  <a routerLink="/contact" routerLinkActive="active">Contact Us</a>
+                                    <a routerLink="/contact" routerLinkActive="active">Contact Us</a>
                                 </li>
-                              </ul>
+                            </ul>
                         </div>
                     </div>
                 </div>
-                           <div class="col-xl-3 col-lg-3 col-md-6 col-sm-6">
+                <div class="col-xl-3 col-lg-3 col-md-6 col-sm-6">
                     <div class="footer-contact footer-contact-style-2">
                         <div class="footer-title footer-title-style2">
                             <h3>Contact</h3>
                         </div>
                         <div class="footer-location">
                             <ul>
-                                <li class="item-map"><i class="fas fa-map-marker-alt"></i>Glory BLDG, (Kasanchis), Addis Ababa, Ethiopia</li>
-                                <li><a href="mailto:info@example.com"><i class="fas fa-envelope"></i>nigusukingtesfaye@gmail.com</a></li>
-                                <li><a href="tel:+123596000"><i class="fas fa-phone-alt"></i>0946222223 / 0946222224</a></li>
+                                <li class="item-map"><i class="fas fa-map-marker-alt"></i>
+                                    {{locations[0]?.attributes?.name}}</li>
+                                <li><a *ngFor="let data of email" href="mailto:{{data?.attributes?.email}}"><i
+                                            class="fas fa-envelope"></i>{{data?.attributes?.email}}</a></li>
+                                <li>
+                                    <a *ngFor="let data of phones" href="tel:{{data?.attributes?.number}}"><i
+                                            class="fas fa-phone-alt"></i>
+                                        <span style="color: white;">
+                                            {{data?.attributes?.number}}
+                                        </span></a>
+                                </li>
                             </ul>
                         </div>
                     </div>
