--- a/src/app/pages/home/components/home-clients/home-clients.component.html
+++ b/src/app/pages/home/components/home-clients/home-clients.component.html
@@ -1,4 +1,3 @@
-
 <section class="brand-wrap1">
     <div class="container">
         <div class="row align-items-center">
@@ -16,7 +15,8 @@
                     <div *ngFor="let item of clients" class="col-lg-4 col-md-4 col-sm-6">
                         <div class="brand-box2 wow fadeInUp" data-wow-delay=".4s">
                             <div class="item-img">
-                                <a href="index.html"><img [src]="getImagePath(item.attributes.image)" alt="brand"></a>
+                                <a (click)="clientDetail(item.id)"><img [src]="getImagePath(item.attributes.image)"
+                                        alt="brand"></a>
                             </div>
                         </div>
                     </div>
