--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -1,12 +1,11 @@
-<app-navbar/>
-<app-home-hero/>
-<app-home-latest-property/>
-<app-home-clients/>
-<app-home-why-choose-us/>
-<app-home-top-areas/>
-<app-home-agents/>
-<app-home-progress/>
-<app-home-customer-reviews/>
-<app-home-blog/>
-<app-home-cites/>
-<app-footer/>
+<app-navbar />
+<app-home-hero />
+<app-home-latest-property />
+<app-home-clients />
+<app-home-why-choose-us />
+<app-home-top-areas />
+<app-home-progress />
+<app-home-customer-reviews />
+<app-home-blog />
+<app-home-cites />
+<app-footer />
