--- a/src/styles.css
+++ b/src/styles.css
@@ -1,3 +1,6 @@
-.header-menu nav.template-main-menu > ul > li > a:hover {
+@import "primeng/resources/themes/lara-light-blue/theme.css";
+@import "primeng/resources/primeng.css";
+
+.header-menu nav.template-main-menu>ul>li>a:hover {
     color: #50ffe4;
 }
